# public-lung

./: LICENSE  README.md
PRETUS_Plugins/: CMakeLists.txt  README.md
PRETUS_Plugins/Plugin_lusclassificationp/: AspectRatioPixmapLabel.cxx  AspectRatioPixmapLabel.h  CMakeLists.txt  Plugin_LUSclassificationp.cxx  Plugin_LUSclassificationp.h  README.md  Widget_LUSclassificationp.cxx  Widget_LUSclassificationp.h  Worker_LUSclassificationp.cxx  Worker_LUSclassificationp.h  plugin_lusclassificationp_config.h.in
PRETUS_Plugins/Plugin_lusclassificationp/art/: LUS_zones.xcf
PRETUS_Plugins/Plugin_lusclassificationp/python_LUSclassificationp/: LUSclassificationp_worker.py
PRETUS_Plugins/Plugin_lusclassificationp/python_LUSclassificationp/luscp_utils/: classifiers.py
PRETUS_Plugins/Plugin_lusclassificationp/python_LUSclassificationp/models/model_001/: VITAL-lusclassification_training_config.json
